# riddle

./: CHANGELOG.md  CODING_CONVENTIONS.md  Cargo.toml  LICENSE-MIT  README.md  TODO.md
.github/workflows/: rust.yml
0.1.0/: search-index.js  settings.html  source-files.js
0.1.0/riddle/: all.html  enum.Event.html  enum.RiddleError.html  index.html  struct.RiddleContext.html  struct.RiddleLib.html  struct.RiddleState.html
0.1.0/riddle_audio/: all.html  enum.AudioError.html  enum.PlayMode.html  index.html  sidebar-items.js  struct.AudioSystem.html  struct.AudioSystemHandle.html  struct.AudioSystemWeak.html  struct.Clip.html  struct.ClipPlayer.html  struct.ClipPlayerBuilder.html
0.1.0/riddle_common/: all.html  enum.CommonError.html  index.html  macro.define_handles!.html  macro.define_handles.html  struct.Color.html  trait.CloneHandle.html  trait.ColorElement.html  trait.ColorElementConversion.html
0.1.0/riddle_font/: all.html  enum.FontError.html  index.html  sidebar-items.js  struct.TTFont.html
0.1.0/riddle_image/: all.html  enum.ImageError.html  index.html  sidebar-items.js  struct.Color.html  struct.Image.html
0.1.0/riddle_input/: all.html  enum.GamePadAxis.html  enum.GamePadButton.html  enum.InputError.html  enum.InputEvent.html  enum.MouseButton.html  enum.Scancode.html  enum.VirtualKey.html  index.html  sidebar-items.js  struct.GamePadId.html  struct.InputMainThreadState.html  struct.InputSystem.html  struct.InputSystemHandle.html  struct.InputSystemWeak.html  struct.KeyboardModifiers.html  struct.LogicalPosition.html
0.1.0/riddle_math/: all.html  fn.vec2.html  index.html  struct.Rect.html  struct.Vector2.html  trait.SignedSpacialNumeric.html  trait.SpacialNumeric.html  trait.SpacialNumericConversion.html
0.1.0/riddle_platform_common/: all.html  enum.MouseButton.html  enum.PlatformEvent.html  enum.Scancode.html  enum.VirtualKey.html  index.html  sidebar-items.js  struct.LogicalPosition.html  struct.LogicalSize.html  struct.LogicalVec2.html  struct.WindowId.html
0.1.0/riddle_platform_winit/: all.html  enum.PlatformError.html  enum.PlatformEvent.html  index.html  sidebar-items.js  struct.PlatformContext.html  struct.PlatformMainThreadState.html  struct.PlatformSystem.html  struct.PlatformSystemHandle.html  struct.PlatformSystemWeak.html  struct.Window.html  struct.WindowBuilder.html  struct.WindowHandle.html  struct.WindowWeak.html
0.1.0/riddle_renderer_wgpu/: all.html  enum.FilterMode.html  enum.RendererError.html  index.html  sidebar-items.js  (+9 more)
0.2.0/: search-index.js  settings.html
crates/riddle-font/: Cargo.toml
crates/riddle-font/src/: lib.rs  ttfont.rs
crates/riddle-image/: Cargo.toml
crates/riddle-image/src/: error.rs  image.rs  imageview.rs  lib.rs
crates/riddle-input/: Cargo.toml
crates/riddle-input/src/: error.rs  event.rs  gamepad.rs  gamepad_state.rs  input_system.rs  lib.rs
crates/riddle-window-common/: Cargo.toml
crates/riddle-window-common/src/: dimensions.rs  event.rs  lib.rs  scancode.rs  window_id.rs
crates/riddle-window-common/src/traits/: window.rs  window_system.rs
master/: crates.js  search-index.js  settings.html  source-files.js
riddle/: Cargo.toml
riddle-audio/: Cargo.toml
riddle-audio/src/: audio_system.rs  clip.rs  clip_player.rs  doctest.rs  error.rs  fades.rs  lib.rs
riddle-audio/src/ext/: audio_system.rs  mod.rs
riddle-common/: Cargo.toml
riddle-font/: Cargo.toml
riddle-font/examples/font-imgfont-generator/: main.rs
riddle-font/examples/font-imgfont-rendersimple/: main.rs
riddle-font/src/: error.rs  imgfont.rs  lib.rs  ttfont.rs
riddle-font/src/rusttype_ext/: mod.rs  ttfont.rs
riddle-image/: Cargo.toml
riddle-image/examples/image-distance-field/: main.rs
riddle-image/src/: error.rs  image.rs  imageview.rs  lib.rs  packer.rs
riddle-image/src/filters/: distance_field.rs  mod.rs
riddle-image/src/image_ext/: image.rs  mod.rs
riddle-input/: Cargo.toml
riddle-input/src/: error.rs  event.rs  gamepad.rs  gamepad_state.rs  input_system.rs  keyboard_state.rs  lib.rs  mouse_state.rs
riddle-input/src/ext/: input_system.rs  mod.rs
riddle-macros/: Cargo.toml
riddle-math/: Cargo.toml
riddle-platform-common/: Cargo.toml
riddle-platform-common/src/: dimensions.rs  doctest.rs  event.rs  lib.rs  mouse.rs  scancode.rs  virtualkey.rs  window_id.rs
riddle-platform-common/src/traits/: mod.rs  window.rs
riddle-platform-winit/: Cargo.toml
riddle-platform-winit/src/: dimensions.rs  error.rs  event.rs  lib.rs  platform_context.rs  platform_system.rs  window.rs  window_map.rs
riddle-platform-winit/src/ext/: mod.rs  platform_system.rs
riddle-platform-winit/src/winit_ext/: mod.rs  window.rs
riddle-renderer-common/: Cargo.toml
riddle-renderer-common/src/: lib.rs  renderer.rs  sprite.rs  sprite_font.rs  vertex.rs
riddle-renderer-wgpu/: Cargo.toml
riddle-renderer-wgpu/src/: buffered_renderer.rs  device.rs  error.rs  lib.rs  render_context.rs  renderer.rs  shader.rs  sprite.rs  sprite_atlas.rs  sprite_init_args.rs  sprite_render_args.rs  sprite_render_target.rs  sprite_utils.rs  swap_chain_target.rs  target.rs  texture.rs  window_device.rs
riddle-renderer-wgpu/src/ext/: mod.rs
riddle-renderer-wgpu/src/shaders/: default.frag  default.vert  default.wgsl
riddle-renderer-wgpu/src/wgpu_ext/: buffered_renderer.rs  device.rs  mod.rs  render_context.rs  renderable.rs  renderer.rs  shader.rs  sprite.rs  sprite_atlas.rs  sprite_font.rs  sprite_render_target.rs  swap_chain_target.rs  target.rs  texture.rs  vertex.rs  window_device.rs
riddle-time/: Cargo.toml
riddle-time/src/: doctest.rs  lib.rs  time_system.rs  timer.rs
riddle-time/src/ext/: mod.rs  time_system.rs
riddle/examples/pong/: main.rs
riddle/examples/sandbox/: main.rs
riddle/examples/wgpu-renderer-overlay/: custom_renderer.rs  main.rs
riddle/examples/wgpu-renderer-overlay/shaders/: default.frag  default.frag.spv  default.vert  default.vert.spv  default.wgsl
riddle/src/: context.rs  error.rs  event.rs  lib.rs  riddle_lib.rs  state.rs
src/: app.rs  context.rs  error.rs  event.rs  lib.rs  state.rs
(+924 files in other folders)
