[package]
name = "riddle-audio"
version = "0.1.0"
authors = ["vickles <vicklesort@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
riddle-mp3 = ["rodio/mp3"]

[dependencies]
riddle-common = {path = "../riddle-common"}

futures = "0.3"
rodio = { version = "0.11", git = "https://github.com/vickles/rodio/", branch="typed-new-decoder", default-features=false, features=["wav", "vorbis"] }
thiserror = "1.0"


[dev-dependencies]
riddle = {path = "../riddle"}