[package]
name = "riddle-audio"
version = "0.3.0-dev"
authors = ["vickles <vicklesort@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
riddle-mp3 = ["rodio/mp3"]

[dependencies]
riddle-common = {version = "0.3.0-dev", path = "../riddle-common"}

futures = "0.3"
rodio = { version = "0.13", default-features=false, features=["wav", "vorbis"] }
thiserror = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies.rodio]
version = "^0.13.1"
default-features = false
features = ["wav", "vorbis", "wasm-bindgen"]

[dev-dependencies]
riddle = {path = "../riddle"}