[package]
name = "riddle-font"
version = "0.3.0-dev"
authors = ["vickles <vicklesort@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riddle-common = {version = "0.3.0-dev", path = "../riddle-common"}
riddle-image = {version = "0.3.0-dev", path = "../riddle-image"}
riddle-math = {version = "0.3.0-dev", path = "../riddle-math"}

futures = "0.3"
rusttype = "0.9"
thiserror = "1.0"