[package]
name = "riddle-image"
version = "0.3.0-dev"
authors = ["vickles <vicklesort@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riddle-math = {version = "0.3.0-dev", path = "../riddle-math"}
riddle-common = {version = "0.3.0-dev", path = "../riddle-common"}

bytemuck = "1.3"
futures = "0.3"
image = "0.23"
thiserror = "1.0"

[dev-dependencies]
itertools = "0.10"