[package]
name = "riddle-input"
version = "0.3.0-dev"
authors = ["vickles <vicklesort@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riddle-common = {path = "../riddle-common"}
riddle-platform-common = {path = "../riddle-platform-common"}

bitflags = "1.2.1"
gilrs = "0.8"
thiserror = "1.0"

[dev-dependencies]
riddle = {path = "../riddle"}