[package]
name = "riddle-platform-winit"
version = "0.3.0-dev"
authors = ["vickles <vicklesort@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riddle-common = {path = "../riddle-common"}
riddle-platform-common = {path = "../riddle-platform-common"}

raw-window-handle = "0.3"
thiserror = "1.0"

winit = "0.24"

[dev-dependencies]
riddle = {path = "../riddle"}