[package]
name = "riddle-platform-winit"
version = "0.3.0-dev"
authors = ["vickles <vicklesort@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riddle-common = {version = "0.3.0-dev", path = "../riddle-common"}
riddle-platform-common = {version = "0.3.0-dev", path = "../riddle-platform-common"}

raw-window-handle = "0.3"
thiserror = "1.0"

winit = "0.24"

[target.'cfg(target_arch = "wasm32")'.dependencies.winit]
version = "0.24"
features = ["web-sys"]

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"

[dev-dependencies]
riddle = {path = "../riddle"}