[package]
name = "riddle-renderer-common"
version = "0.3.0-dev"
authors = ["vickles <vicklesort@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riddle-common = {path = "../riddle-common"}
riddle-image = {path = "../riddle-image"}
riddle-font = {path = "../riddle-font"}
riddle-math = {path = "../riddle-math"}

bytemuck = "1.3"
mint = "0.5"
thiserror = "1.0"

[dev-dependencies]
riddle = {path = "../riddle"}
riddle-renderer-wgpu = {path = "../riddle-renderer-wgpu"}