[package]
name = "riddle-renderer-common"
version = "0.3.0-dev"
authors = ["vickles <vicklesort@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riddle-common = {version = "0.3.0-dev", path = "../riddle-common"}
riddle-image = {version = "0.3.0-dev", path = "../riddle-image"}
riddle-font = {version = "0.3.0-dev", path = "../riddle-font"}
riddle-math = {version = "0.3.0-dev", path = "../riddle-math"}

bytemuck = "1.3"
mint = "0.5"

[dev-dependencies]
riddle = {version = "0.3.0-dev", path = "../riddle"}
riddle-renderer-wgpu = {version = "0.3.0-dev", path = "../riddle-renderer-wgpu"}