[package]
name = "riddle-renderer-wgpu"
version = "0.1.0"
authors = ["vickles <vicklesort@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riddle-common = {path = "../riddle-common"}
riddle-image = {path = "../riddle-image"}
riddle-macros = {path = "../riddle-macros"}
riddle-math = {path = "../riddle-math"}
riddle-platform-winit = {path = "../riddle-platform-winit"}

bytemuck = "1.3"
glam = {version= "0.9", features=["mint"]}
futures = "0.3"
thiserror = "1.0"
wgpu = "0.6"
mint = "0.5"