[package]
name = "riddle-renderer-wgpu"
version = "0.3.0-dev"
authors = ["vickles <vicklesort@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riddle-common = {path = "../riddle-common"}
riddle-font = {path = "../riddle-font"}
riddle-image = {path = "../riddle-image"}
riddle-math = {path = "../riddle-math"}
riddle-platform-winit = {path = "../riddle-platform-winit"}

bytemuck = "1.3"
glam = {version= "0.11", features=["mint"]}
futures = "0.3"
log = "0.4"
thiserror = "1.0"
wgpu = "0.7"
mint = "0.5"

[dev-dependencies]
riddle = {path = "../riddle"}

[target.'cfg(target_arch = "wasm32")'.dependencies.wgpu]
version = "0.7"
features = ["webgl"]