[package]
name = "riddle-renderer-wgpu"
version = "0.3.0-dev"
authors = ["vickles <vicklesort@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riddle-common = {version = "0.3.0-dev", path = "../riddle-common"}
riddle-image = {version = "0.3.0-dev", path = "../riddle-image"}
riddle-math = {version = "0.3.0-dev", path = "../riddle-math"}
riddle-platform-winit = {version = "0.3.0-dev", path = "../riddle-platform-winit"}
riddle-renderer-common = {version = "0.3.0-dev", path = "../riddle-renderer-common"}

bytemuck = "1.3"
glam = {version= "0.14", features=["mint"]}
futures = "0.3"
log = "0.4"
thiserror = "1.0"
wgpu = "0.8"
mint = "0.5"

[dev-dependencies]
riddle = {version = "0.3.0-dev", path = "../riddle"}

[target.'cfg(target_arch = "wasm32")'.dependencies.wgpu]
version = "0.8"
features = ["webgl"]