[package]
name = "riddle-time"
version = "0.2.0"
authors = ["vickles <vicklesort@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riddle-common = {path = "../riddle-common"}

[dev-dependencies]
riddle = {path = "../riddle"}