[package]
name = "riddle-time"
version = "0.3.0-dev"
authors = ["vickles <vicklesort@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riddle-common = {version = "0.3.0-dev", path = "../riddle-common"}
instant = "0.1"

[dev-dependencies]
riddle = {version = "0.3.0-dev", path = "../riddle"}