[package]
name = "riddle"
version = "0.3.0-dev"
authors = ["vickles <vicklesort@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
default = ["riddle-renderer", "riddle-audio", "riddle-font"]
riddle-renderer = ["riddle-renderer-wgpu"]

riddle-mp3 = ["riddle-audio/riddle-mp3"]

[dependencies]
riddle-audio = {version = "0.3.0-dev", path = "../riddle-audio", optional = true}
riddle-common = {version = "0.3.0-dev", path = "../riddle-common"}
riddle-font = {version = "0.3.0-dev", path = "../riddle-font", optional = true}
riddle-image = {version = "0.3.0-dev", path = "../riddle-image"}
riddle-input = {version = "0.3.0-dev", path = "../riddle-input"}
riddle-math = {version = "0.3.0-dev", path = "../riddle-math"}
riddle-renderer-wgpu = {version = "0.3.0-dev", path = "../riddle-renderer-wgpu", optional = true}
riddle-time = {version = "0.3.0-dev", path = "../riddle-time"}
riddle-platform-winit = {version = "0.3.0-dev", path = "../riddle-platform-winit"}

log = "0.4"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
bytemuck = "1.4"
futures = "0.3"
glam = {version= "0.11", features=["mint"]}
mint = "0.5"
rand = "0.8"
wgpu = "0.8"