[package]
name = "riddle-font"
version = "0.1.0"
authors = ["vickles <vicklesort@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riddle-common = {path = "../riddle-common"}
riddle-image = {path = "../riddle-image"}

rusttype = "0.9"
thiserror = "1.0"