[package]
name = "riddle-image"
version = "0.1.0"
authors = ["vickles <vicklesort@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riddle-math = {path = "../riddle-math"}
riddle-common = {path = "../riddle-common"}

image = "0.23"
thiserror = "1.0"