[package]
name = "riddle-input"
version = "0.1.0"
authors = ["vickles <vicklesort@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riddle-common = {path = "../riddle-common"}
riddle-platform-common = {path = "../riddle-platform-common"}

bitflags = "1.2.1"
gilrs = "0.7.4"
thiserror = "1.0"